# canalyse

./: .gitattributes  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy.yml  test.yml
canalyse/: _version.py  cli.py  parser.py  validator.py
test/: test_parser.py  test_validator.py
test/assets/: conductivity.dot  residue_volume_by_biovoronoi_with_waters.csv  truncated_residue_volume_by_biovoronoi.csv
