[metadata]
name = canalyse
description = Analyse curp result
long_description = file: README.md
long_description_content_type = text/markdown
author = flat35hd99
url = https://github.com/flat35hd99/canalyse
platforms = any
classifier =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/flat35hd99/canalyse/issues
    Source Code = https://github.com/flat35hd99/canalyse

[bdist_wheel]
universal = 1

[options]
install_requires =
    pandas
    click

python_requires = >=3.6

[versioneer]
VCS = git
style = pep440
versionfile_source = canalyse/_version.py
versionfile_build = canalyse/_version.py
tag_prefix = v
parentdir_prefix = canalyse-

[flake8]
max-line-length = 88
extend-ignore = E203